--- a/index.html
+++ b/index.html
@@ -4,12 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    
     <link rel="stylesheet" href="styles.css" class="css">
 </head>
 <body>
     <header>
+        <nav>
+            <div class="primary-title">G3 Architect</div>
+            <div class="menu-items">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+            </div>
+        </nav>
 
-
+        <div class="banner">
+            <div class="banner-content">
+            <h1 class="banner-title">Brand New <br>Group of Architects 
+            </h1>
+            <p class="primary-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+        </div>
+    </div>
     </header>
     <main></main>
     <footer></footer>
