--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
             </h1>
             <p class="primary-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <button class="btn-primary">Explore More</button>
+            </div>
+            <div class="banner-cover">
+                <img src="images/banner.png" alt="">
+            </div>
         </div>
-    </div>
     </header>
     <main></main>
     <footer></footer>
