--- a/index.html
+++ b/index.html
@@ -33,7 +33,23 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <seciton class="teams-container">
+            <div class="team-image-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="team-text-container">
+                <h3 class="primary-title"><span class="quick-list">Quick list</span> of Our <span class="features">Features</span></h3>
+                <p class="primary-para">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </seciton>
+
+
+    </main>
     <footer></footer>
 </body>
 </html>
